Fix text align inside input field when minimized

--- a/FreeCodeCamp/Wikipedia_Viewer/wiki.css
+++ b/FreeCodeCamp/Wikipedia_Viewer/wiki.css
@@ -26,26 +26,27 @@ a, a:visited, a:hover, a:active, a:-webkit-any-link {
 }
 
 input {
-  transition: width 0.6s, border-radius 0.6s, background 0.6s, box-shadow 0.6s;
+  transition-property: width, border-radius, background, box-shadow;
+  transition-duration: 0.6s;
   width: 40px;
   height: 40px;
   border-radius: 20px;
   border: none;
   cursor: pointer;
   background: #3CC47C;
-/*  border: 2px solid #3CC47C;
-  border-radius: 8px;*/
 }
+/*input, .search-icon {    color: white;    }*/
 
 input:hover {
   color: white;
   background: rgb(200, 200, 200);
   box-shadow: 0 0 0 5px rgb(61, 71, 82);
-/*  & + label .search-icon {    color: white    }*/
 }
+/*input:hover, .search-icon {    color: white;    }*/
 
 input:focus {
-  transition: width 0.6s, border-radius 0.6s, background 0.6s;
+  transition-property: width, border-radius, background;
+  transition-duration: 0.6s;
   border: none;
   outline: none;
   box-shadow: none;
@@ -55,6 +56,11 @@ input:focus {
   border-radius: auto;
   background: rgb(235, 235, 235);
   color: black;
+}
+/*input:focus .search-icon {    color: black;    }*/
+
+input:not(:focus) {
+  text-indent:-5000px;
 }
 
 .search-icon {
